test/resources/typer/passing/IfWithError.grading.amy
object If
  val a: Int(32) = if (true) then error("") else error("") end if;
  val x: Int(32) = if (true) then 1 else 2 end if;
  x
end If
