test/resources/typer/failing/LetError1.grading.amy
object LetError1
  def test(): Int(32) =
    val x: Int(32) = 1;
    false
  end test
end LetError1
